# cocos-engine

./: package-lock.json
cocos/core/pipeline/: render-pipeline.ts
native/: CMakeLists.txt
native/cmake/: predefine.cmake
native/cocos/application/: BaseGame.h  CocosApplication.cpp  CocosApplication.h
native/cocos/audio/: AudioEngine.cpp
native/cocos/audio/android/: AudioEngine-inl.cpp
native/cocos/base/: Log.cpp  Macros.h  TypeDef.h  ZipUtils.h
native/cocos/base/memory/: CallStack.cpp  CallStack.h  MemoryHook.cpp
native/cocos/base/threading/: ReadWriteLock.h
native/cocos/bindings/auto/: jsb_spine_auto.cpp
native/cocos/bindings/jswrapper/: State.cpp  State.h  Value.cpp  Value.h  config.h
native/cocos/bindings/manual/: jsb_conversions.h  jsb_global.cpp  jsb_global_init.cpp  jsb_module_register.cpp
native/cocos/core/utils/: IDGenerator.cpp
native/cocos/engine/: Engine.cpp
native/cocos/network/: HttpClient.cpp
native/cocos/platform/: BasePlatform.cpp  FileUtils.cpp  FileUtils.h  Image.cpp
native/cocos/platform/apple/: ResourceFileSystem.mm
native/cocos/platform/filesystem/: FilePath.cpp  IFileHandle.h  LocalFileHandle.cpp  LocalFileSystem.cpp
native/cocos/platform/win32/: WindowsFileHandle.cpp  WindowsFileSystem.cpp
native/cocos/renderer/pipeline/: RenderPipeline.cpp
native/tests/unit-test/src/: CMakeLists.txt
native/tests/unit-test/src/cocos/platform/filesystem/: filepath_test.cpp  filesystem_test.cpp  local_filesystem.cpp  win_filesystem_test.cpp
pal/screen-adapter/native/: screen-adapter.ts
scripts/build-engine/src/: index.ts
(+20 files in other folders)
